# sparrow-static

./: Dockerfile  Makefile  README.md  setup.cfg
sparrow_static/: __main__.py  create_static_site.py
