[metadata]
name = sparrow-static
version = 0.1.1
author = Sparrow Computing
author_email = ben@sparrow.dev

[options]
install_requires = 
    boto3
    fire

[options.extras_require]
dev =
    jupyter
    pytest
    pytest-cov
    uv

[options.entry_points]
console_scripts = 
    sparrow-static = sparrow_static.__main__:main

[pylint.FORMAT]
disable = all
enable = unused-import